# rust-embedded-study

./: 404.html  Cargo.toml  ghspa.js  index.html  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: web-deploy.yaml
assets/: index-CInJpKoS.js  index-JhkMjxST.css  index-uDtCEkef.js
ble-app/: app.json  eas.json  package.json  pnpm-lock.yaml  tailwind.config.js
ble-app/android/: settings.gradle
ble-app/android/app/: build.gradle
ble-app/android/app/src/main/: AndroidManifest.xml
ble-app/android/app/src/main/java/com/anonymous/bleapp/: MainActivity.kt  MainApplication.kt
ble-app/android/app/src/main/res/values/: strings.xml
ble-app/app/: _layout.tsx
ble-app/app/(tabs)/: _layout.tsx  index.tsx  services.tsx
ble-app/app/ble/: devices.tsx
ble-app/app/ble/connect/: [id].tsx
ble-app/hooks/: useBle.tsx  useBleStore.ts  useStore.ts
ble-app/ios/: Podfile
ble-app/ios/bleapp/: Info.plist
ble-app/ios/bleapp.xcodeproj/: project.pbxproj
ble-app/ios/bleapp.xcodeproj/xcshareddata/xcschemes/: bleapp.xcscheme
src/: led.rs  lib.rs  server.rs  wifi.rs
src/ble/: app.rs  app_builder.rs  mod.rs  service.rs  test.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  store.ts
web/src/components/: Header.tsx  Layout.tsx
web/src/pages/: Bt.tsx  Home.tsx  Http.tsx  Mqtt.tsx  Ws.tsx
web/src/routers/: index.tsx
