[package]
name = "rust-embedded-study"
version = "0.1.0"
authors = ["yexiyue <yexiyue666@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

# [[bin]]
# name = "rust-embedded-study"
# harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49.1" }
anyhow = "1.0.86"
toml-cfg = "0.2.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
shtcx = "1.0.0"
embedded-svc = "0.28.0"
rgb = "0.8.44"
enumset = "1.1.3"
heapless = "0.8.0"
esp32-nimble = "0.7.0"

[build-dependencies]
embuild = "0.32.0"
